# vdb-flow

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cli.py  config.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.yaml
scripts/: update_changelog.py
src/: __init__.py  composition.py  config.py  constants.py  embed_and_upload_adrs.py  rate_limiter.py  validation.py
src/cli/: __main__.py  commands.py  main.py
src/database/: __init__.py  port.py
src/database/adapters/: __init__.py  inmemory.py  qdrant.py
src/services/: collection.py  embedding.py  text_processing.py
tests/integration/: test_cli_functional.py  test_collection_service.py  test_inmemory_adapter.py
tests/unit/: __init__.py  test_cli.py  test_collection_service.py  test_qdrant_adapter.py  test_validation.py
