[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=7.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdb-flow"
dynamic = ["version"]
description = "A command-line tool for managing Architecture Decision Records (ADRs) in a Qdrant vector database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "cloro7", email = "claramartinordonez@gmail.com"}
]
keywords = ["vector-database", "qdrant", "adr", "embeddings", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.0",
    "commitizen>=3.18.0",
]

[project.scripts]
vdb-flow = "src.cli.main:main"

[project.entry-points."vdb_flow.adapters"]
# Entry points for third-party database adapters
# Example:
# pinecone = "vdb_flow_pinecone:register_pinecone_adapter"
# weaviate = "vdb_flow_weaviate:register_weaviate_adapter"

[project.urls]
Homepage = "https://github.com/cloro7/vdb-flow"
Repository = "https://github.com/cloro7/vdb-flow"
Issues = "https://github.com/cloro7/vdb-flow/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "*.tests*", "*.tests"]

[tool.setuptools_scm]
write_to = "src/_version.py"
# Use default version scheme: if on a tag, use tag version; otherwise tag version + .devN
# This ensures versions come from git tags following semantic versioning
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.0.0"
version_files = []
update_changelog_on_bump = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
